--- a/web/src/global.css
+++ b/web/src/global.css
@@ -26,3 +26,11 @@ body {
 .form-container {
   @apply bg-zinc-900 p-4 relative rounded-2xl mb-4 flex flex-col items-center shadow-lg w-[calc(100vw-2rem)] md:w-auto
 }
+
+.form-types {
+  @apply flex py-8 gap-2 w-full
+}
+
+.form-types-button {
+  @apply bg-zinc-800 rounded-lg py-5 w-24 flex flex-1 flex-col items-center gap-2 border-2 border-transparent hover:border-brand-500 focus:border-brand-500 outline-none
+}
