--- a/web/src/global.css
+++ b/web/src/global.css
@@ -35,6 +35,28 @@ body {
   @apply bg-zinc-800 rounded-lg py-5 w-24 flex flex-1 flex-col items-center gap-2 border-2 border-transparent hover:border-brand-500 focus:border-brand-500 outline-none
 }
 
+.form-content-container {
+  @apply my-4 w-full
+}
+
+.form-content-text-area {
+  @apply min-w-[304px] w-full min-h-[112px] text-sm placeholder-zinc-400 text-zinc-100 border-zinc-600 bg-transparent rounded-md focus:border-brand-500 focus:ring-brand-500 focus:ring-1 focus:outline-none resize-none scrollbar-thin scrollbar-thumb-zinc-700 scrollbar-track-transparent
+}
+
+.form-content-footer {
+  @apply flex gap-2 mt-2
+}
+
+.form-content-footer-camera {
+  @apply p-2 bg-zinc-800 rounded-md border-transparent hover:bg-zinc-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900 focus:ring-brand-500 transition-colors 
+}
+
+.form-content-footer-submit {
+  @apply p-2 bg-brand-500 rounded-md border-transparent flex flex-1 justify-center items-center text-sm hover:bg-brand-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900 focus:ring-brand-500 transition-colors
+}
+
 .form-footer {
   @apply text-xs text-neutral-400
 }
+
+
