Add FeedbackSuccessStep and adjust logic for submitting form

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -36,7 +36,7 @@ body {
 }
 
 .form-content-container {
-  @apply my-4 w-full
+  @apply my-4 w-full min-w-[19rem]
 }
 
 .form-content-text-area {
@@ -59,8 +59,18 @@ body {
   @apply p-2 bg-brand-500 rounded-md border-transparent flex flex-1 justify-center items-center text-sm hover:bg-brand-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900 focus:ring-brand-500 transition-colors disabled:opacity-50 disabled:hover:bg-brand-500
 }
 
+.form-success-container {
+  @apply flex flex-col items-center py-10 w-[304px] 
+}
+
+.form-success-message {
+  @apply text-xl mt-2
+}
+
+.form-success-button {
+  @apply py-2 px-6 mt-6 bg-zinc-800 rounded-md border-transparent text-sm leading-6 hover:bg-zinc-700 transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900 focus:ring-brand-500 transition-colors disabled:opacity-50 disabled:hover:bg-brand-500
+}
+
 .form-footer {
   @apply text-xs text-neutral-400
 }
-
-
